--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <!-- <link rel="stylesheet" href="./css/1-timer.css"> -->
 
-     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+     <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css"> -->
     
   </head>
   <body>
@@ -69,8 +69,8 @@
         </div>
     </div>
 <script type="module" src="./js/1-timer.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="https://cdn.jsdelivr.net/npm/izitoast"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/izitoast"></script> -->
  
   </body>
 </html>
